--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
                 <label>How much stress will this purchase add to my finances?</label>
                 <input type="range" min="1" max="10" step="0.5" value="5.5" />
             </fieldset>
-            <fieldset class="p-price-comparison">
-                <span class="value"></span>
-                <label>Have I compared prices and options?</label>
-                <input type="range" min="1" max="10" step="0.5" value="5.5" />
-            </fieldset>
             <fieldset class="p-usage-freq">
                 <span class="value"></span>
                 <label>How often will I use It?</label>
-                <input type="range" id="usage-freq" min="1" max="8" value="5" step="1" />
+                <input type="range" min="1" max="8" value="5" step="1" />
             </fieldset>
             <fieldset class="p-pur-relevance">
                 <label>The product will still be relevant and last after a
                 <span class="value"></span>.</label>
                 <input type="range" min="2" max="10" step="2" value="4" />
+            </fieldset>
+            <fieldset class="p-price-comparison">
+                <span class="value"></span>
+                <label>Have I compared prices and options?</label>
+                <input type="range" min="1" max="10" step="0.5" value="5.5" />
             </fieldset>
             <fieldset class="p-longterm-goals">
                 <span class="value"></span>
@@ -90,13 +90,12 @@
 <script>
 (function() {
     const params = [
-    <!-- todo: update weights to total 1-->
-    { weight: 0.25, value: 5.5, negative: false, name: 'p-need' },
-    { weight: 0.25, value: 5.5, negative: true, name: 'p-harm' },
-    { weight: 0.30, value: 5.5, negative: true, name: 'p-finances' },
-    { weight: 0.15, value: 5.5, negative: false, name: 'p-price-comparison' },
+    { weight: 0.2, value: 5.5, negative: false, name: 'p-need' },
+    { weight: 0.2, value: 5.5, negative: true, name: 'p-harm' },
+    { weight: 0.2, value: 5.5, negative: true, name: 'p-finances' },
     { weight: 0.15, value: 5.5, negative: false, name: 'p-usage-freq' },
-    { weight: 0.10, value: 5.5, negative: false, name: 'p-pur-relevance' },
+    { weight: 0.15, value: 5.5, negative: false, name: 'p-pur-relevance' },
+    { weight: 0.05, value: 5.5, negative: false, name: 'p-price-comparison' },
     { weight: 0.05, value: 5.5, negative: false, name: 'p-longterm-goals' },
 ]
     const usageFreqValueMap = {
