add usage section

--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@
 
     <section>
         <p>
-            Money is a tool. For some, it is a tool to gain happiness.
-            For others, it is a tool to get freedom, security, power or whatever they want.
-            But the core use of this tool is to get basic comfort for leading
-            a good life.
-        </p>
-        <p>
             This is an opinionated tool to help decide on a purchase of product.
             When considering an impulsive purchase, it's wise to ask yourself a series of
             reflective questions to determine if the purchase is prudent. If it is bad,
             then avoid it, so that the money can be put to a better use.</p>
+
+        <h4>Usage</h4>
+        <p>Impulsive purchases mostly happen in my mobile. To avoid it,
+            I removed quick-commerce, e-commerce apps from my mobile. Any time I want to make
+            a purchase, I come to my browser where I have bookmarked this tab. Then, before
+            making the purchase, I go through this filter to avoid impulsive purchases.
+        </p>
     </section>
 
     <footer>Inspired fork from <a href="https://dont.build">dont.build</a> &mdash; <div id="year" style="display: inline-block"></div> / <a href="https://github.com/realvinay/dontspend.money">GitHub</a></footer>
