fix: Fix inconsistencies in readme

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </p>
     </section>
 
-    <footer>Inspired fork from <a href="https://dont.build">dont.build</a> and <a href="https://dontspend.money">dontspend.money</a> &mdash; <span id="year"></span> / <a href="https://github.com/realvinay/dontspend.money">GitHub</a></footer>
+    <footer>Inspired fork from <a href="https://dont.build">dont.build</a> and <a href="https://dontspend.money">dontspend.money</a> &mdash; <span id="year"></span> / <a href="https://github.com/joeirimpan/dontcode.work">GitHub</a></footer>
 </div>
 
 
