fix: Tone the qn down

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
         <form class="form">
             <fieldset class="p-boilerplate">
                 <span class="value"></span>
-                <label>How much of this is boilerplate you've written 100 times before?</label>
+                <label>How much of this is boilerplate?</label>
                 <input type="range" min="0" max="10" step="0.5" value="5" />
             </fieldset>
             <fieldset class="p-learning">
                 <span class="value"></span>
-                <label>Will manually writing this teach you something you don't already know?</label>
+                <label>How much will writing this teach you?</label>
                 <input type="range" min="0" max="10" step="0.5" value="5" />
             </fieldset>
             <fieldset class="p-exists">
                 <span class="value"></span>
-                <label>Has this exact code been written millions of times before?</label>
+                <label>How common is this type of code?</label>
                 <input type="range" min="0" max="10" step="0.5" value="5" />
             </fieldset>
             <fieldset class="p-joy">
                 <span class="value"></span>
-                <label>Will you actually enjoy writing this by hand?</label>
+                <label>Will you enjoy writing this yourself?</label>
                 <input type="range" min="0" max="10" step="0.5" value="5" />
             </fieldset>
             <fieldset class="p-urgency">
